force-app/main/default/objects/sendEmailOnMultipleOpportunities__c/sendEmailOnMultipleOpportunities__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>sendEmailOnMultipleOpportunities</label>
</CustomObject>