force-app/main/default/objects/sendEmailOnMultipleOpportunities__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <label>body</label>
    <type>TextArea</type>
</CustomField>