force-app/main/default/objects/sendEmailOnMultipleOpportunities__c/fields/processBuilderName__c.field-meta.xml
<CustomField>
    <fullName>processBuilderName__c</fullName>
    <label>processBuilderName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>