force-app/main/default/objects/sendEmailOnMultipleOpportunities__c/fields/senderDisplayName__c.field-meta.xml
<CustomField>
    <fullName>senderDisplayName__c</fullName>
    <label>senderDisplayName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>