force-app/main/default/objects/sendEmailOnMultipleOpportunities__c/fields/sendToEmailAddress__c.field-meta.xml
<CustomField>
    <fullName>sendToEmailAddress__c</fullName>
    <label>sendToEmailAddress</label>
    <type>Email</type>
</CustomField>